2022-09-05T02:31:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990445171
* notice: last 14d: unq all: 12 37
* notice: prev accum: outdated-unq outdated-all / unq all: 286 452 / 311 490
* notice: next accum: outdated-unq outdated-all / unq all: 287 453 / 311 490
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-21] / []

2022-09-04T02:27:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2986551674
* notice: last 14d: unq all: 12 38
* notice: prev accum: outdated-unq outdated-all / unq all: 285 450 / 311 489
* notice: next accum: outdated-unq outdated-all / unq all: 286 452 / 311 490
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-20] / []

2022-09-03T16:30:05Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2985061444
* notice: last 14d: unq all: 12 39
* notice: prev accum: outdated-unq outdated-all / unq all: 285 450 / 311 490
* notice: next accum: outdated-unq outdated-all / unq all: 285 450 / 311 489
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-08-20]

2022-09-03T02:32:58Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2982869291
* notice: last 14d: unq all: 12 40
* notice: prev accum: outdated-unq outdated-all / unq all: 285 450 / 311 489
* notice: next accum: outdated-unq outdated-all / unq all: 285 450 / 311 490
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-02]

2022-09-02T08:29:00Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977677958