@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-23T02:25:04Z",
-  "count" : 7,
+  "timestamp" : "2022-09-05T08:27:50Z",
+  "count" : 6,
   "count_minmax" : [ 1, 7 ],
-  "count_decinc" : [ -0, +7 ],
+  "count_decinc" : [ -1, +7 ],
   "uniques" : 5,
   "uniques_minmax" : [ 1, 5 ],
   "uniques_decinc" : [ -0, +5 ]
