@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-05T02:31:06Z",
+  "timestamp" : "2022-09-05T08:27:50Z",
   "count_outdated" : 453,
   "uniques_outdated" : 287,
-  "count" : 490,
+  "count" : 489,
   "uniques" : 311,
   "clones" : [
     {
       "timestamp": "2022-08-22T00:00:00Z",
-      "count": 7,
+      "count": 6,
       "count_minmax": [ 1, 7 ],
       "uniques": 5,
       "uniques_minmax": [ 1, 5 ]
