@@ -1,3 +1,11 @@
+2022-09-05T08:27:50Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2991779017
+* notice: last 14d: unq all: 12 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 287 453 / 311 490
+* notice: next accum: outdated-unq outdated-all / unq all: 287 453 / 311 489
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +5 +7 -0 -1 / 5 6
+* notice: removed / changed dates: [] / [2022-08-22]
+
 2022-09-05T02:31:06Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990445171
 * notice: last 14d: unq all: 12 37
